# version-identification-lyrics

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
archive/audio_encoder/: livi_model.py  losses.py  scheduler.py  trainer.py  trainer2.py  utils.py  vit.py
archive/audio_encoder/config/: config copy.yaml  config-best2.yaml  config-best3.yaml  config.yaml  config_best.yaml  config_best_best.yaml  whissper.yaml
archive/audio_encoder/dataset/: create_webdataset.py  process.py  webdataset.py  whisper_feature_extractor.py
archive/audio_encoder/evaluate/: main.py
archive/audio_encoder/main/: main.py  main1.py  main4.py  main5.py  main6.py  main7.py
archive/audio_encoder/models/: lie.py  lie2.py  lie3.py  lie4.py  lie5.py
archive/audio_encoder/train/: trainer.py  trainer2.py
archive/coverhunter/: README.md  dataset.py  extract_cqt.py  inference.py  main.py
archive/coverhunter/src/: Aligner.py  dataset.py  eval_testset.py  model.py  trainer.py
archive/coverhunter/tools/: alignment_for_frame.py  eval_testset.py  extract_csi_features.py  identify.py  make_embeds.py  train.py  train_prod.py  train_tune.py
archive/data_processing/: [after_transcription_before_audio_encoder_dataset]align_transcriptions_vocal_chunks.py
archive/evaluator/: compute_embeddings.py  embeddings.py  evaluate.py  lyrics_evaluator.py  parser.py  ranker.py  reranker.py
archive/plots/: model_size_inference_time.py
archive/text_fine_tuning/: main.py
archive/transcriber/: main.py  run.py  run_transcriber_benchmark.py
archive/vocal_detector/: main.py  run.py
docs/: architecture.md  data.md
src/: main.py
src/livi/: cli.py  config.py
src/livi/experiments/: audio_lyrics_alignment.py  cli.py  model_size_inference_time.py  ranker.py  reranker.py  similarity_transcription_editorial.py  sparse_embeddings.py  (+3 more)
(+51 files in other folders)
